tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__onboarding_test__onboarding_recovery_display_confirmed.snap
---
source: tests/snapshot_tests/screens/onboarding_test.rs
expression: backend
---
"                                                                                "
"                       ⚠ Recovery Key - Write These Down!                       "
"                                                                                "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │ 1. abandon     2. abandon     3. abandon    4. abandon   │          "
"          │ 5. abandon     6. abandon     7. abandon    8. abandon   │          "
"          │ 9. abandon    10. abandon    11. abandon   12. abandon   │          "
"          │13. abandon    14. abandon    15. abandon   16. abandon   │          "
"          │17. abandon    18. abandon    19. abandon   20. abandon   │          "
"          │21. abandon    22. abandon    23. abandon   24. abandon   │          "
"          │                                                          │          "
"          │                                                          │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                      Copy to clipboard         Regenerate                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                          ☑ I have saved my recovery key                        "
"                                                                                "
"                                    Next step                                   "
"          ←→/Tab: navigate  |  Enter: activate  |  Space: toggle  |  E          "
"                                    Step 2/4                                    "
"                                                                                "
