tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__onboarding_test__onboarding_recovery_input.snap
---
source: tests/snapshot_tests/screens/onboarding_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                               Enter Recovery Key                               "
"                                                                                "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │01. abandon    02. ability    03. ____      04. ____      │          "
"          │05. ____       06. ____       07. ____      08. ____      │          "
"          │09. ____       10. ____       11. ____      12. ____      │          "
"          │13. ____       14. ____       15. ____      16. ____      │          "
"          │17. ____       18. ____       19. ____      20. ____      │          "
"          │21. ____       22. ____       23. ____      24. ____      │          "
"          │                                                          │          "
"          │                                                          │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                Tab: next word  |  Enter: submit  |  Esc: go back               "
"                                    Step 2/3                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
