tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__onboarding_test__onboarding_recovery_verify_partial.snap
---
source: tests/snapshot_tests/screens/onboarding_test.rs
expression: backend
---
"                                                                                "
"                               Verify Recovery Key                              "
"                                                                                "
"                   Enter the word at each specified position:                   "
"                                                                                "
"            Word #3                                                             "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │abandon                                                   │          "
"          └──────────────────────────────────────────────────────────┘          "
"            Word #6                                                             "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │wrongword                                                 │          "
"          └──────────────────────────────────────────────────────────┘          "
"            Word #13                                                            "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │ab_                                                       │          "
"          └──────────────────────────────────────────────────────────┘          "
"            Word #22                                                            "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │                                                          │          "
"          └──────────────────────────────────────────────────────────┘          "
"                ↑↓/Tab: navigate  |  Enter: verify  |  Esc: back                "
"                                    Step 3/4                                    "
"                                                                                "
