tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__onboarding_test__onboarding_set_password.snap
---
source: tests/snapshot_tests/screens/onboarding_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                  ░█▀█░█▀█░█▀▀░█▀█░█░█░█▀▀░█░█░█▀▄░▀█▀░█▀█░█▀▀                  "
"                  ░█░█░█▀▀░█▀▀░█░█░█▀▄░█▀▀░░█░░█▀▄░░█░░█░█░█░█                  "
"                  ░▀▀▀░▀░░░▀▀▀░▀░▀░▀░▀░▀▀▀░░▀░░▀░▀░▀▀▀░▀░▀░▀▀▀                  "
"                                                                                "
"                               Set Master Password                              "
"                                                                                "
"               You will be redirected to set your master password.              "
"                                                                                "
"                      Enter to continue  |  Esc to go back                      "
"                                    Step 4/4                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
