tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__onboarding_test__onboarding_welcome_create_new.snap
---
source: tests/snapshot_tests/screens/onboarding_test.rs
expression: backend
---
"                                                                                "
"                  ░█▀█░█▀█░█▀▀░█▀█░█░█░█▀▀░█░█░█▀▄░▀█▀░█▀█░█▀▀                  "
"                  ░█░█░█▀▀░█▀▀░█░█░█▀▄░█▀▀░░█░░█▀▄░░█░░█░█░█░█                  "
"                  ░▀▀▀░▀░░░▀▀▀░▀░▀░▀░▀░▀▀▀░░▀░░▀░▀░▀▀▀░▀░▀░▀▀▀                  "
"                                                                                "
"                  Secure, open-source terminal password manager                 "
"                                                                                "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │ ✦ Create New Vault                                       │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │ ↻ Restore Existing Vault (Cloud or .okb)                 │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │ ↓ Import from Another Manager                            │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                                                                                "
"                               L: Language (auto)                               "
"                ↑↓/Tab: navigate  |  Enter: select  |  Esc: quit                "
"                                    Step 1/1                                    "
"                                                                                "
